Fix text spacing in welcome and vision blurbs

--- a/site/src/styles/about/about/_text-block.scss
+++ b/site/src/styles/about/about/_text-block.scss
@@ -36,8 +36,12 @@
   font-size: px2vw(30, $designLarge);
   letter-spacing: ps2em(0);
   line-height: px2lh(30, 50);
-  margin: 6% auto;
+  margin: 5.7vw auto;
   width: 67%;
+  @media (max-width: $about-break) {
+    letter-spacing: .01em;
+    width: 66%;
+  }
   @media (max-width: $about-single-column-break) {
     margin: 0% auto;
     padding: 8% 2%;
